Cleaned code, variable and class names. Added a few comments and exmaples of optimizers.Removed spanish variable names

--- a/Mochila - Knapsack problem.ipynb
+++ b/Mochila - Knapsack problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -10,13 +10,16 @@
      "output_type": "stream",
      "text": [
       "to approach the value  100  without going over, we must take: \n",
-      "obj  2  with value  35\n",
-      "obj  6  with value  13\n",
-      "obj  7  with value  44\n",
-      "obj  8  with value  2\n",
-      "obj  11  with value  1\n",
+      "obj  3  with value  23\n",
+      "obj  5  with value  70\n",
       "METHOD:  COBYLA\n",
-      "sum:  95 percentage:  100.0 %\n"
+      "sum:  93 percentage:  48.06 %\n",
+      "to approach the value  100  without going over, we must take: \n",
+      "METHOD:  SLSQP\n",
+      "sum:  0 percentage:  100.0 %\n",
+      "to approach the value  100  without going over, we must take: \n",
+      "METHOD:  BFGS\n",
+      "sum:  0 percentage:  100.0 %\n"
      ]
     }
    ],
@@ -26,40 +29,30 @@
     "import scipy\n",
     "import operator\n",
     "\n",
-    "#Feel free to change these parameters\n",
-    "\n",
+    "# Input parameters. Feel free to change them.\n",
     "L = 100                                         # Limit value\n",
     "objs = [60, 35, 23, 55, 70, 13]                 # weights of the items\n",
     "capas = 5                                       # number of layers\n",
     "initial = 0                                     # inizialization value\n",
-    "methods = ['COBYLA']                            # methods that you want to use\n",
-    "\n",
-    "\n",
-    "\n",
+    "methods = ['COBYLA','SLSQP','BFGS']             # methods that you want to use\n",
+    "# See https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html#scipy.optimize.minimize for available methods\n",
     "\n",
     "n = len(objs) \n",
     "gamma = 2 / (n*L)  \n",
     "\n",
-    "class MyGate(cirq.Gate):\n",
+    "class ParametrizedGate(cirq.Gate):\n",
     "    \n",
-    "    def _descompose_(self, qs):        \n",
-    "\n",
-    "        \n",
+    "    def _decompose_(self, qs):        \n",
     "        for i in range(n):\n",
-    "            \n",
     "            Rz = cirq.Z(qs[n]) ** (gamma * objs[i])\n",
     "            yield Rz.controlled_by(qs[i])\n",
     "\n",
     "    def _num_qubits_(self):\n",
     "        return n + 1\n",
     "    \n",
-    "    def num_qubits(self):\n",
-    "        return n + 1\n",
-    "    \n",
     "    def _unitary_(self):\n",
     "        return cirq.unitary(\n",
-    "            cirq.Circuit(self._descompose_(\n",
-    "                cirq.LineQubit.range(n + 1)))) \n",
+    "            cirq.Circuit(self._decompose_(cirq.LineQubit.range(n + 1)))) \n",
     "    \n",
     "def ansatz(params):\n",
     "    \n",
@@ -74,8 +67,6 @@
     "        ansatz.append([cirq.Z(qs[i]) ** params[i + (2*j+1)*n] for i in range(n)])\n",
     "        ansatz.append([cirq.CX(qs[aux[0]], qs[aux[1]]) \n",
     "                       for aux in [[i,i+1] for i in range(n - 1)]])\n",
-    "    \n",
-    "\n",
     "\n",
     "    return ansatz\n",
     "\n",
@@ -88,7 +79,7 @@
     "        qs = cirq.LineQubit.range(n + 2)\n",
     "        circuit = cirq.Circuit()\n",
     "        circuit.append(cirq.X(qs[n]))\n",
-    "        cg = cirq.ControlledGate(MyGate())\n",
+    "        cg = cirq.ControlledGate(ParametrizedGate())\n",
     "        circuit.append(cirq.H(qs[n + 1]))\n",
     "        circuit.append(cirq.S(qs[n + 1]) ** i)\n",
     "        circuit.append(cg(qs[n + 1], *[qs[i] for i in range(n + 1)])) \n",
@@ -109,7 +100,7 @@
     "        return np.abs(np.cos(L * gamma * np.pi) - real) \n",
     "    \n",
     "    \n",
-    "def solucion(method,n):\n",
+    "def solution(method,n):\n",
     "    \n",
     "    initial_params = np.array([initial]*(2*capas*n))\n",
     "    minimum = scipy.optimize.minimize(expected_values,\n",
@@ -123,30 +114,29 @@
     "    rep = 10000\n",
     "    sol = s.run(final, repetitions = rep)\n",
     "\n",
-    "    solucion = max(sol.histogram(key = 'm').items(),\n",
+    "    result = max(sol.histogram(key = 'm').items(),\n",
     "                   key=operator.itemgetter(1))[0]\n",
     "    times = max(sol.histogram(key = 'm').items(), \n",
     "                key=operator.itemgetter(1))[1]\n",
     "\n",
-    "    suma = 0\n",
-    "\n",
+    "    sum = 0\n",
     "    print(\"to approach the value \", L, \" without going over, we must take: \")\n",
-    "    for i, n in enumerate(np.binary_repr(solucion,n)):\n",
-    "        suma += int(n)*objs[i]\n",
+    "    for i, n in enumerate(np.binary_repr(result,n)):\n",
+    "        sum += int(n) * objs[i]\n",
     "        if int(n) == 1:\n",
-    "            print(\"obj \", i + 1, \" with value \",objs[i])\n",
+    "            print(\"obj \", i + 1, \" with value \", objs[i])\n",
     "\n",
     "    print(\"METHOD: \",  method)\n",
-    "    print(\"sum: \",suma, \"percentage: \", 100* times / rep , \"%\")\n",
+    "    print(\"sum: \",sum, \"percentage: \", 100* times / rep , \"%\")\n",
     "\n",
     "    \n",
     "\n",
     "for method in methods:\n",
     "    try:\n",
-    "        solucion(method,n)\n",
+    "        solution(method,n)\n",
     "    except Exception as e:\n",
     "        print(method, \" does not work\")\n",
-    "        print('Exception: '+str(e))\n",
+    "        print('Exception: ' + str(e)) # Printing exact error for debugging if necessary\n",
     "    \n"
    ]
   },
