--- a/MisProyectos/Hamiltoniano.ipynb
+++ b/MisProyectos/Hamiltoniano.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "n_qubits = 4\n",
     "\n",
-    "ansantz = QuantumCircuit(4)\n",
+    "ansantz = QuantumCircuit(n_qubits)\n",
     "\n",
     "\n",
     "H = Hamiltoniano()\n",
@@ -163,9 +163,9 @@
     "# un término consta de una lista con las puertas de pauli y \n",
     "# el qubit que ocupan, el nº de qubits y el coeficiente de este término\n",
     "\n",
-    "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['X', 0], ['Y', 1], ['Z', 2], ['Y', 2]], 4, 3))\n",
-    "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['Z', 1], ['X', 1], ['Z', 2], ['X', 2]], 4, 0))\n",
-    "H.incluir_termino(Termino_hamiltoniano([['Z', 0]], 4, 2))\n",
+    "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['X', 0], ['Y', 1], ['Z', 2], ['Y', 2]], n_qubits 3))\n",
+    "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['Z', 1], ['X', 1], ['Z', 2], ['X', 2]], n_qubits, 0))\n",
+    "H.incluir_termino(Termino_hamiltoniano([['Z', 0]], n_qubits, 2))\n",
     "\n",
     "H.calcular_valor_esperado(ansantz)"
    ]
