--- a/MisProyectos/Hamiltoniano.ipynb
+++ b/MisProyectos/Hamiltoniano.ipynb
@@ -163,7 +163,7 @@
     "# un término consta de una lista con las puertas de pauli y \n",
     "# el qubit que ocupan, el nº de qubits y el coeficiente de este término\n",
     "\n",
-    "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['X', 0], ['Y', 1], ['Z', 2], ['Y', 2]], n_qubits 3))\n",
+    "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['X', 0], ['Y', 1], ['Z', 2], ['Y', 2]], n_qubits, 3))\n",
     "H.incluir_termino(Termino_hamiltoniano([['Z', 0], ['Z', 1], ['X', 1], ['Z', 2], ['X', 2]], n_qubits, 0))\n",
     "H.incluir_termino(Termino_hamiltoniano([['Z', 0]], n_qubits, 2))\n",
     "\n",
