--- a/N-Queens Problem/N-Reinas 2.0.ipynb
+++ b/N-Queens Problem/N-Reinas 2.0.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Explicación del problema: https://youtu.be/ZGKSoTUaphU\n",
+    "Explicación del código: https://youtu.be/3wVwpPzoyDs\n",
+    "\n",
     "Nuestra función a minimizar será:\n",
     "\n",
     "\n",
