--- a/ClasificadorKernel.ipynb
+++ b/ClasificadorKernel.ipynb
@@ -65,8 +65,8 @@
    "id": "6b9a25f0",
    "metadata": {},
    "source": [
-    "# Modelo\n",
-    "En primer lugar definiremos el feature map, es decir, como vamos a codificar los datos. Se puede ver como la función que envían un vector del dominio clásico al dominio cuántico. Después de esto, hay que definir una función kernel capaz de determinar si dos elementos son similares o no."
+    "# Función Kernel\n",
+    "En primer lugar definiremos el feature map, es decir, como vamos a codificar los datos. Se puede ver como la función que envían un vector del dominio clásico al dominio cuántico. Después de esto, hay que definir una función capaz de determinar si dos elementos son similares o no."
    ]
   },
   {
@@ -108,7 +108,7 @@
    "source": [
     "# Predicción\n",
     "\n",
-    "Una vez que tenemos el modelo generado ya podemos preguntar por las predicciones de nuestro conjunto de test. Es importante remarcar que este modelo es más lento a la hora de predecir que otros algoritmos variacionales pero a cambio no ha hecho falta realizar ningún entrenamiento!"
+    "Una vez que tenemos la función kernel definida ya podemos preguntar por las predicciones de nuestro conjunto de test. Es importante remarcar que este modelo es más lento a la hora de predecir que otros algoritmos variacionales pero a cambio no ha hecho falta realizar ningún entrenamiento!"
    ]
   },
   {
