--- a/vqe_casero.ipynb
+++ b/vqe_casero.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,20 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(3., requires_grad=False)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creamos cada uno de los circuitos\n",
     "\n",
@@ -41,7 +30,6 @@
     "variables = 3\n",
     "dev = qml.device(\"default.qubit\", wires = variables, shots = 1000)\n",
     "\n",
-    "@qml.template\n",
     "def phi():\n",
     "    qml.PauliX(wires = 1) \n",
     "    qml.PauliX(wires = 2)\n",
@@ -201,7 +189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
