--- a/DivisionEntera.ipynb
+++ b/DivisionEntera.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a71acecf",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "tensor([0, 1, 0], requires_grad=True)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b06e8f05",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "tensor(1, requires_grad=True)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,45 +100,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "44a0f6b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1], requires_grad=True)"
+       "tensor([0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0], requires_grad=True)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "wires_dividendo = [0,1,2,3]\n",
-    "wires_divisor = [4,5,6,7]\n",
-    "wires_aux_dividendo = [8,9,10]\n",
-    "wires_solucion = [11,12,13,14]\n",
-    "wires_aux = 15\n",
+    "wires_dividendo = [0,1,2,3,4,5]\n",
+    "wires_divisor = [6,7,8,9]\n",
+    "wires_aux_dividendo = [10,11,12]\n",
+    "wires_solucion = [13,14,15,16,17,18]\n",
+    "wires_aux = 19\n",
     "\n",
     "def division(wires_dividendo, wires_divisor, wires_aux_dividendo, wires_solucion, wires_aux):\n",
     "    \n",
     "    wires_dividendo_totales = wires_aux_dividendo + wires_dividendo\n",
     "    \n",
     "    for i in range(len(wires_solucion)):\n",
-    "        window = wires_dividendo_totales[i: len(wires_divisor)+ i]\n",
+    "        window = wires_dividendo_totales[i - 1: len(wires_divisor)+ i]\n",
+    "        if i == 0:\n",
+    "            window = wires_dividendo_totales[0: len(wires_divisor)]\n",
     "        is_greater(window, wires_divisor, wires_aux, wires_solucion[i])\n",
     "        qml.ctrl(substract_m_n, control = wires_solucion[i])(window, wires_divisor)\n",
     "        \n",
     "        \n",
     "        \n",
-    "dev = qml.device(\"default.qubit\", wires = 16, shots = 1)\n",
+    "dev = qml.device(\"default.qubit\", wires = 20, shots = 1)\n",
     "\n",
     "@qml.qnode(dev)\n",
     "def circuit():\n",
-    "    qml.BasisEmbedding(15, wires = wires_dividendo)\n",
-    "    qml.BasisEmbedding(4, wires = wires_divisor)\n",
+    "    qml.BasisEmbedding(32, wires = wires_dividendo)\n",
+    "    qml.BasisEmbedding(13, wires = wires_divisor)\n",
     "    division(wires_dividendo, wires_divisor, wires_aux_dividendo, wires_solucion, wires_aux)\n",
     "    \n",
     "    \n",
