--- a/LCU.ipynb
+++ b/LCU.ipynb
@@ -30,7 +30,7 @@
     "import pennylane as qml\n",
     "import numpy as np\n",
     "\n",
-    "H = 0.5 * qml.PauliX(0) + 0.5 * j qml.PauliY(0)\n",
+    "H = 0.5 * qml.PauliX(0) + 0.5 * qml.PauliY(0)\n",
     "\n",
     "qml.matrix(H)"
    ]
